Planet Overflow fixed, Space reduced Between Sec 5 and 6

--- a/src/components/about/section-five/section-five.module.css
+++ b/src/components/about/section-five/section-five.module.css
@@ -25,7 +25,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    padding-bottom: 274px;
+    padding-bottom: 200px;
     z-index: 10;
     gap: 50px;
     padding-top: 900px;
@@ -103,7 +103,7 @@
 
 .water {
     position: relative;
-    height: 1440px;
+    height: 1350px;
 }
 
 .iceberg {
